--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1368,9 +1368,9 @@
         "enter_sms_code": "Введіть 6-значний SMS-код",
         "error_404": "Виникла помилка. Будь ласка, оновіть сторінку.",
         "resend_code": "Код для повторного відправлення",
-        "seconds": "{час} секунда(и)",
         "unknown_error": "Невідома помилка.",
-        "verify": "Підтвердити"
+        "verify": "Підтвердити",
+        "seconds": "{{time}} другий(і)"
     },
     "modal_2fa_setup": {
         "2fa": "Двофакторна автентифікація",
@@ -1381,7 +1381,6 @@
         "confirm": "Підтвердити",
         "enter_2fa_code": "Щоб продовжити, введіть код безпеки двофакторної автентифікації.",
         "enter_app_code": "Введіть 6-значний код у додатку",
-        "enter_app_code_6_digits": "Щоб продовжити, введіть 6-значний код безпеки від {провайдера}",
         "enter_phone": "Щоб продовжити, введіть свій номер телефону",
         "enter_sms_code": "Введіть 6-значний SMS-код",
         "enter_sms_code_6_digits": "Щоб продовжити, введіть 6-значний SMS-код, надісланий на ваш номер телефону.",
@@ -1392,7 +1391,6 @@
         "link_phone": "Прив'яжіть свій номер телефону",
         "phone_number": "Номер телефону",
         "resend_code": "Код для повторного відправлення",
-        "seconds": "{час} секунда(и)",
         "select_auth_app": "Виберіть програму автентифікації, яку ви хочете використовувати.",
         "setup_2fa": "Налаштування двофакторної автентифікації",
         "successful_login": "Спрацювало!",
@@ -1401,7 +1399,9 @@
         "welcome_back": "Ви успішно увійшли за допомогою двофакторної автентифікації. З поверненням!",
         "already_have_app_steps": "1. У додатку виберіть Налаштування <strong class=\"text-strong\">облікового запису</strong><br>2. Виберіть <strong class=\"text-strong\">Відсканувати QR-код</strong> або <strong class=\"text-strong\">Ввести ключ встановлення</strong>: <strong class=\"text-strong\"> {{secret}}</strong>",
         "dont_have_app": "<strong class=\"text-strong\"> Якщо у вас немає програми {{name}} </strong>, ви можете завантажити її з <strong class=\"text-strong\">Play Store</strong> або <strong class=\"text-strong\">App Store</strong>.",
-        "already_have_app": "Якщо у вас вже є додаток {{name}}, виконайте наведені нижче дії:"
+        "already_have_app": "Якщо у вас вже є додаток {{name}}, виконайте наведені нижче дії:",
+        "enter_app_code_6_digits": "Щоб продовжити, введіть 6-значний код безпеки {{provider}}",
+        "seconds": "{{time}} другий(і)"
     },
     "modal_fund_help": {
         "chat": "Чат",
@@ -2010,7 +2010,6 @@
         }
     },
     "preferences_notifications": {
-        "auto_close_after": "Спливаючі сповіщення автоматично закриваються через {значення} секунд.",
         "auto_close_disabled": "Автоматичне закриття вимкнено",
         "auto_close_disabled_description": "Автоматичне закриття спливаючих сповіщень вимкнено.",
         "auto_close_enabled": "Автоматичне закриття ввімкнено",
@@ -2150,7 +2149,8 @@
         },
         "unsubscribe": "Відпишіться від усіх сповіщень на електронну пошту",
         "unsubscribe_button": "Відмовитися від підписки",
-        "unsubscribe_desc": "Я хочу відписатися від усіх сповіщень на електронну пошту."
+        "unsubscribe_desc": "Я хочу відписатися від усіх сповіщень на електронну пошту.",
+        "auto_close_after": "Спливаючі сповіщення закриваються автоматично через {{value}} секунд."
     },
     "privacy": {
         "breadcrumbs": {
@@ -2666,7 +2666,6 @@
             "title": "Деталі бронювання"
         },
         "expired": "На жаль, ваше бронювання було скасовано під час оформлення замовлення, оскільки обраний товар розпродано.",
-        "expiring": "Будь ласка, зверніть увагу, що до здійснення доплати залишилося <strong>{закінчується через} хвилин</strong>. В іншому випадку бронювання буде скасовано автоматично.",
         "extra_amount_refund": {
             "amount": "Сума",
             "date": "Дата",
@@ -2702,7 +2701,8 @@
                 "waiting": "Чекаємо на оплату"
             }
         },
-        "title": "Деталі поповнення"
+        "title": "Деталі поповнення",
+        "expiring": "Будь ласка, зверніть увагу, що залишилося <strong>{{expiresIn}} хвилин</strong>, щоб здійснити доплату. В іншому випадку бронювання буде автоматично скасовано."
     },
     "reservations": {
         "breadcrumbs": {
@@ -3476,7 +3476,7 @@
         "error": "Не вийшло!",
         "fund_activation": {
             "digid_success": "Увійшов за допомогою DigiD.",
-            "success": "{Кредит активовано!"
+            "success": "{{fund_name}} кредит активовано!"
         },
         "pre_check": {
             "downloaded": "Завантаження почнеться за кілька хвилин.",
@@ -3514,5 +3514,27 @@
         "placeholders": {
             "select_option": "Виберіть варіант"
         }
+    },
+    "modal_deactivate_voucher": {
+        "back": "Назад",
+        "cancel": "Скасувати",
+        "close": "Закрити",
+        "confirm": "Підтвердити",
+        "confirm_stop_participation": "Ви впевнені, що хочете припинити свою участь?",
+        "header_title": "Припинити участь",
+        "max_characters": "Макс. 140 символів",
+        "next": "Далі",
+        "reason": "Причина",
+        "reason_for_stopping": "Причина зупинки:",
+        "reasons": {
+            "income_change": "Зміна доходу",
+            "moved": "Переїзд",
+            "not_interested": "Пропозиція не є привабливою",
+            "other": "В іншому випадку"
+        },
+        "stop_participation": "Припинення вашої {{name}} участі.",
+        "stop_successful": "Участь припинено",
+        "success_message": "Ваша участь у {{name}} припинена.",
+        "warning": "Примітка: Після цього ви більше не зможете використовувати свій кредит. Ваш кредит {{name}} буде деактивовано."
     }
 }
