--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -1368,9 +1368,9 @@
         "enter_sms_code": "Wprowadź 6-cyfrowy kod SMS",
         "error_404": "Wystąpił błąd. Odśwież stronę.",
         "resend_code": "Wyślij ponownie kod",
-        "seconds": "{time} second(s)",
         "unknown_error": "Nieznany błąd.",
-        "verify": "Weryfikacja"
+        "verify": "Weryfikacja",
+        "seconds": "{{time}} sekunda(y)"
     },
     "modal_2fa_setup": {
         "2fa": "Uwierzytelnianie dwuskładnikowe",
@@ -1381,7 +1381,6 @@
         "confirm": "Potwierdzenie",
         "enter_2fa_code": "Aby kontynuować, wprowadź kod bezpieczeństwa uwierzytelniania dwuskładnikowego.",
         "enter_app_code": "Wprowadź 6-cyfrowy kod z poziomu aplikacji.",
-        "enter_app_code_6_digits": "Aby kontynuować, wprowadź 6-cyfrowy kod bezpieczeństwa od {dostawcy}.",
         "enter_phone": "Aby kontynuować, wprowadź swój numer telefonu",
         "enter_sms_code": "Wprowadź 6-cyfrowy kod SMS",
         "enter_sms_code_6_digits": "Aby kontynuować, wprowadź 6-cyfrowy kod SMS wysłany na Twój numer telefonu.",
@@ -1392,7 +1391,6 @@
         "link_phone": "Połącz swój numer telefonu",
         "phone_number": "Numer telefonu",
         "resend_code": "Wyślij ponownie kod",
-        "seconds": "{time} second(s)",
         "select_auth_app": "Wybierz aplikację uwierzytelniającą, której chcesz użyć.",
         "setup_2fa": "Konfigurowanie uwierzytelniania dwuskładnikowego",
         "successful_login": "Udało się!",
@@ -1401,7 +1399,9 @@
         "welcome_back": "Pomyślnie zalogowano się przy użyciu uwierzytelniania dwuskładnikowego. Witamy ponownie!",
         "already_have_app_steps": "1. W aplikacji wybierz opcję <strong class=\"text-strong\">Konfiguracja konta</strong><br>2. Wybierz <strong class=\"text-strong\">Skanuj kod QR</strong> lub <strong class=\"text-strong\">Wprowadź klucz instalacyjny</strong>: <strong class=\"text-strong\"> {{secret}}</strong>",
         "dont_have_app": "<strong class=\"text-strong\"> Jeśli nie masz aplikacji {{name}}, </strong>możesz ją pobrać ze <strong class=\"text-strong\">Sklepu Play</strong> lub <strong class=\"text-strong\">App Store</strong>.",
-        "already_have_app": "Jeśli masz już aplikację {{name}}, wykonaj poniższe czynności:"
+        "already_have_app": "Jeśli masz już aplikację {{name}}, wykonaj poniższe czynności:",
+        "enter_app_code_6_digits": "Aby kontynuować, wprowadź 6-cyfrowy kod bezpieczeństwa {{provider}}",
+        "seconds": "{{time}} sekunda(y)"
     },
     "modal_fund_help": {
         "chat": "Czat",
@@ -2010,7 +2010,6 @@
         }
     },
     "preferences_notifications": {
-        "auto_close_after": "Powiadomienia wyskakujące są automatycznie zamykane po {wartość} sekundach.",
         "auto_close_disabled": "Automatyczne zamykanie jest wyłączone",
         "auto_close_disabled_description": "Automatyczne zamykanie wyskakujących powiadomień jest wyłączone.",
         "auto_close_enabled": "Automatyczne zamykanie jest włączone",
@@ -2150,7 +2149,8 @@
         },
         "unsubscribe": "Rezygnacja z subskrypcji wszystkich powiadomień e-mail",
         "unsubscribe_button": "Zrezygnuj z subskrypcji",
-        "unsubscribe_desc": "Chcę zrezygnować z subskrypcji wszystkich powiadomień e-mail."
+        "unsubscribe_desc": "Chcę zrezygnować z subskrypcji wszystkich powiadomień e-mail.",
+        "auto_close_after": "Powiadomienia wyskakujące zamykają się automatycznie po {{value}} sekundach."
     },
     "privacy": {
         "breadcrumbs": {
@@ -2666,7 +2666,6 @@
             "title": "Szczegóły rezerwacji"
         },
         "expired": "Przepraszamy, rezerwacja została anulowana podczas procesu realizacji zakupu, ponieważ wybrany produkt został wyprzedany.",
-        "expiring": "Należy pamiętać, że na dokonanie dodatkowej płatności pozostało <strong>{expiresIn} minut</strong>. W przeciwnym razie rezerwacja zostanie automatycznie anulowana.",
         "extra_amount_refund": {
             "amount": "Kwota",
             "date": "Data",
@@ -2702,7 +2701,8 @@
                 "waiting": "Oczekiwanie na płatność"
             }
         },
-        "title": "Szczegóły doładowania"
+        "title": "Szczegóły doładowania",
+        "expiring": "Należy pamiętać, że na dokonanie dodatkowej płatności pozostało <strong>{{expiresIn}} minut</strong>. W przeciwnym razie rezerwacja zostanie automatycznie anulowana."
     },
     "reservations": {
         "breadcrumbs": {
@@ -3476,7 +3476,7 @@
         "error": "Nie udało się!",
         "fund_activation": {
             "digid_success": "Zalogowany za pomocą DigiD.",
-            "success": "Kredyt {nazwa_funduszu} aktywowany!"
+            "success": "{{fund_name}} kredyt aktywowany!"
         },
         "pre_check": {
             "downloaded": "Pobieranie rozpocznie się za kilka chwil.",
@@ -3514,5 +3514,27 @@
         "placeholders": {
             "select_option": "Wybierz opcję"
         }
+    },
+    "modal_deactivate_voucher": {
+        "back": "Powrót",
+        "cancel": "Anuluj",
+        "close": "Zamknij",
+        "confirm": "Potwierdzenie",
+        "confirm_stop_participation": "Czy na pewno chcesz zrezygnować z uczestnictwa?",
+        "header_title": "Zaprzestanie uczestnictwa",
+        "max_characters": "Maks. 140 znaków",
+        "next": "Następny",
+        "reason": "Powód",
+        "reason_for_stopping": "Powód zatrzymania:",
+        "reasons": {
+            "income_change": "Zmiana dochodu",
+            "moved": "Relokacja",
+            "not_interested": "Oferta nie jest atrakcyjna",
+            "other": "W przeciwnym razie"
+        },
+        "stop_participation": "Zaprzestanie uczestnictwa w {{name}}.",
+        "stop_successful": "Udział został wstrzymany",
+        "success_message": "Twój udział w {{name}} został wstrzymany.",
+        "warning": "Uwaga: Po wykonaniu tej czynności nie można już korzystać z kredytu. Kredyt {{name}} zostanie dezaktywowany."
     }
 }
