--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1261,12 +1261,6 @@
             "why": "Почему?",
             "activate": "Активируйте"
         },
-        "product_item_grid": {
-            "bookmark": "Добавить в список желаний"
-        },
-        "product_item_list": {
-            "bookmark": "Добавить в список желаний"
-        },
         "product_item_search": {
             "free": "Бесплатно"
         },
@@ -1274,6 +1268,15 @@
             "no_data": "Нет данных",
             "open_provider": "Открытый поставщик",
             "show_locations": "Показать места"
+        },
+        "product_item": {
+            "bookmark": "Добавить в список желаний",
+            "payment_option_ideal": "Возможна дополнительная оплата",
+            "payment_option_ideal_aria_label": "Возможна дополнительная оплата: нажмите для получения дополнительной информации",
+            "payment_option_qr": "QR-платеж",
+            "payment_option_qr_aria_label": "QR-платеж: нажмите для получения дополнительной информации",
+            "payment_option_reservation": "Оплатить онлайн",
+            "payment_option_reservation_aria_label": "Оплата онлайн: нажмите для получения дополнительной информации"
         }
     },
     "logo_alt_text": {
@@ -2237,7 +2240,14 @@
             "limit": "Оставшийся кредит:",
             "max_limit": "Максимум на человека:",
             "pay_from_voucher": "Вы платите из кредита:",
-            "price": "Цена:"
+            "price": "Цена:",
+            "payment_option_ideal": "Оплатить онлайн (iDEAL)",
+            "payment_option_ideal_aria_label": "Оплата онлайн (iDEAL): нажмите для получения дополнительной информации",
+            "payment_option_qr": "Показать QR-код у провайдера",
+            "payment_option_qr_aria_label": "Показать QR-код у провайдера: нажмите для получения дополнительной информации",
+            "payment_option_reservation": "Забронировать онлайн",
+            "payment_option_reservation_aria_label": "Онлайн-бронирование: нажмите для получения дополнительной информации",
+            "payment_options": "Варианты оплаты"
         },
         "low_amount": "У вас нет кредита с достаточным балансом.",
         "map": {
@@ -2284,7 +2294,15 @@
             "providers": "Провайдеры",
             "search": "Поисковое предложение",
             "sort": "Сортировать",
-            "sub_category": "Подкатегория"
+            "sub_category": "Подкатегория",
+            "payment_option_ideal": "Оплата онлайн с помощью iDeal",
+            "payment_option_qr": "Показать QR-код у провайдера",
+            "payment_option_reservation": "Забронировать онлайн",
+            "payment_options": "Варианты оплаты",
+            "payment_options_info": "Подробнее о вариантах оплаты",
+            "price": "Цена (€)",
+            "price_from": "С сайта",
+            "price_to": "На"
         },
         "sort": {
             "created_at_asc": "Самый старый первый",
@@ -3536,5 +3554,17 @@
         "stop_successful": "Участие прекращено",
         "success_message": "Ваше участие на сайте {{name}} прекращено.",
         "warning": "Примечание: После этого вы больше не сможете использовать свой кредит. Ваш кредит {{name}} будет деактивирован."
+    },
+    "modal_product_payment_options_info": {
+        "confirm": "Все ясно!",
+        "description": "Варианты оплаты зависят от товара. Оплата может быть произведена несколькими способами:",
+        "header": "Варианты оплаты",
+        "info_option_extra_payment_ideal_description": "Вашего кредита недостаточно для бронирования? Для некоторых продуктов вы можете спокойно оплатить оставшуюся сумму онлайн через iDEAL.",
+        "info_option_extra_payment_ideal_title": "Дополнительная оплата (iDeal)",
+        "info_option_qr_description": "Легко оплатите услугу в месте нахождения поставщика, предъявив QR-код, полученный при оформлении заказа. Поставщик отсканирует код, и платеж будет немедленно обработан.",
+        "info_option_qr_title": "QR-код",
+        "info_option_reservation_description": "Оплатите заказ через этот сайт, заказав предложение. Для этого нажмите на кнопку резервирования и заполните необходимые данные. Сумма будет вычтена непосредственно из доступного кредита. Поставщик получит заказ и при необходимости свяжется с вами.",
+        "info_option_reservation_title": "Бронирование",
+        "title": "Варианты оплаты"
     }
 }
