--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -1261,12 +1261,6 @@
             "why": "Warum?",
             "activate": "Aktivieren Sie"
         },
-        "product_item_grid": {
-            "bookmark": "Zur Wunschliste hinzufügen"
-        },
-        "product_item_list": {
-            "bookmark": "Zur Wunschliste hinzufügen"
-        },
         "product_item_search": {
             "free": "Kostenlos"
         },
@@ -1274,6 +1268,15 @@
             "no_data": "Keine Daten",
             "open_provider": "Anbieter öffnen",
             "show_locations": "Standorte anzeigen"
+        },
+        "product_item": {
+            "bookmark": "Zur Wunschliste hinzufügen",
+            "payment_option_ideal": "Zusätzliche Zahlung möglich",
+            "payment_option_ideal_aria_label": "Zusätzliche Zahlung möglich: Klicken Sie für weitere Informationen",
+            "payment_option_qr": "QR-Zahlung",
+            "payment_option_qr_aria_label": "QR-Zahlung: Klicken Sie für weitere Informationen",
+            "payment_option_reservation": "Online bezahlen",
+            "payment_option_reservation_aria_label": "Online bezahlen: Klicken Sie für weitere Informationen"
         }
     },
     "logo_alt_text": {
@@ -2237,7 +2240,14 @@
             "limit": "Verbleibender Kredit:",
             "max_limit": "Maximal pro Person:",
             "pay_from_voucher": "Sie zahlen aus dem Guthaben:",
-            "price": "Preis:"
+            "price": "Preis:",
+            "payment_option_ideal": "Online bezahlen (iDEAL)",
+            "payment_option_ideal_aria_label": "Online-Zahlung (iDEAL): Klicken Sie für weitere Informationen",
+            "payment_option_qr": "QR-Code beim Anbieter anzeigen",
+            "payment_option_qr_aria_label": "QR-Code beim Anbieter anzeigen: Klicken Sie für weitere Informationen",
+            "payment_option_reservation": "Online buchen",
+            "payment_option_reservation_aria_label": "Online-Reservierung: Klicken Sie für weitere Informationen",
+            "payment_options": "Zahlungsmöglichkeiten"
         },
         "low_amount": "Sie haben keinen Kredit mit ausreichendem Guthaben.",
         "map": {
@@ -2284,7 +2294,15 @@
             "providers": "Anbieter",
             "search": "Angebot suchen",
             "sort": "Sortieren",
-            "sub_category": "Unterkategorie"
+            "sub_category": "Unterkategorie",
+            "payment_option_ideal": "Online-Bezahlung mit iDeal",
+            "payment_option_qr": "QR-Code beim Anbieter anzeigen",
+            "payment_option_reservation": "Online buchen",
+            "payment_options": "Zahlungsmöglichkeiten",
+            "payment_options_info": "Lesen Sie mehr über Zahlungsmöglichkeiten",
+            "price": "Preis (€)",
+            "price_from": "Von",
+            "price_to": "An"
         },
         "sort": {
             "created_at_asc": "Älteste zuerst",
@@ -3536,5 +3554,17 @@
         "stop_successful": "Teilnahme gestoppt",
         "success_message": "Ihre Teilnahme an {{name}} ist beendet.",
         "warning": "Hinweis: Sie können Ihr Guthaben danach nicht mehr verwenden. Ihr {{name}} Guthaben wird deaktiviert."
+    },
+    "modal_product_payment_options_info": {
+        "confirm": "Es ist klar!",
+        "description": "Die Zahlungsmöglichkeiten variieren je nach Produkt. Die Bezahlung kann auf verschiedene Arten erfolgen:",
+        "header": "Zahlungsmöglichkeiten",
+        "info_option_extra_payment_ideal_description": "Reicht Ihr Guthaben für eine Reservierung nicht aus? Für einige Produkte können Sie den Restbetrag sicher online über iDEAL bezahlen.",
+        "info_option_extra_payment_ideal_title": "Zusätzliche Zahlung (iDeal)",
+        "info_option_qr_description": "Bezahlen Sie ganz einfach vor Ort beim Anbieter, indem Sie den QR-Code zeigen, den Sie an der Kasse erhalten haben. Der Anbieter scannt den Code und die Zahlung wird sofort verarbeitet.",
+        "info_option_qr_title": "QR-Code",
+        "info_option_reservation_description": "Bezahlen Sie über diese Website, indem Sie ein Angebot bestellen. Klicken Sie dazu auf die Schaltfläche \"Reservieren\" und geben Sie die erforderlichen Daten ein. Der Betrag wird direkt von Ihrem Guthaben abgezogen. Der Anbieter wird die Reservierung erhalten und Sie gegebenenfalls kontaktieren.",
+        "info_option_reservation_title": "Buchung",
+        "title": "Zahlungsmöglichkeiten"
     }
 }
