--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -1261,12 +1261,6 @@
             "why": "Dlaczego?",
             "activate": "Aktywuj"
         },
-        "product_item_grid": {
-            "bookmark": "Dodaj do listy życzeń"
-        },
-        "product_item_list": {
-            "bookmark": "Dodaj do listy życzeń"
-        },
         "product_item_search": {
             "free": "Darmowy"
         },
@@ -1274,6 +1268,15 @@
             "no_data": "Brak danych",
             "open_provider": "Otwarty dostawca",
             "show_locations": "Pokaż lokalizacje"
+        },
+        "product_item": {
+            "bookmark": "Dodaj do listy życzeń",
+            "payment_option_ideal": "Możliwa dodatkowa płatność",
+            "payment_option_ideal_aria_label": "Możliwa dodatkowa płatność: kliknij, aby uzyskać więcej informacji",
+            "payment_option_qr": "Płatność QR",
+            "payment_option_qr_aria_label": "Płatność QR: kliknij, aby uzyskać więcej informacji",
+            "payment_option_reservation": "Płatność online",
+            "payment_option_reservation_aria_label": "Płatność online: kliknij, aby uzyskać więcej informacji"
         }
     },
     "logo_alt_text": {
@@ -2237,7 +2240,14 @@
             "limit": "Pozostały kredyt:",
             "max_limit": "Maksymalnie na osobę:",
             "pay_from_voucher": "Płacisz z kredytu:",
-            "price": "Cena:"
+            "price": "Cena:",
+            "payment_option_ideal": "Płatność online (iDEAL)",
+            "payment_option_ideal_aria_label": "Płatność online (iDEAL): kliknij, aby uzyskać więcej informacji",
+            "payment_option_qr": "Pokaż kod QR u dostawcy",
+            "payment_option_qr_aria_label": "Pokaż kod QR u dostawcy: kliknij, aby uzyskać więcej informacji",
+            "payment_option_reservation": "Zarezerwuj online",
+            "payment_option_reservation_aria_label": "Rezerwacja online: kliknij, aby uzyskać więcej informacji",
+            "payment_options": "Opcje płatności"
         },
         "low_amount": "Nie masz kredytu z wystarczającym saldem.",
         "map": {
@@ -2284,7 +2294,15 @@
             "providers": "Dostawcy",
             "search": "Oferta wyszukiwania",
             "sort": "Sortuj",
-            "sub_category": "Podkategoria"
+            "sub_category": "Podkategoria",
+            "payment_option_ideal": "Płatność online za pomocą iDeal",
+            "payment_option_qr": "Pokaż kod QR u dostawcy",
+            "payment_option_reservation": "Zarezerwuj online",
+            "payment_options": "Opcje płatności",
+            "payment_options_info": "Więcej informacji o opcjach płatności",
+            "price": "Cena (€)",
+            "price_from": "Od",
+            "price_to": "Do"
         },
         "sort": {
             "created_at_asc": "Najstarszy pierwszy",
@@ -3536,5 +3554,17 @@
         "stop_successful": "Udział został wstrzymany",
         "success_message": "Twój udział w {{name}} został wstrzymany.",
         "warning": "Uwaga: Po wykonaniu tej czynności nie można już korzystać z kredytu. Kredyt {{name}} zostanie dezaktywowany."
+    },
+    "modal_product_payment_options_info": {
+        "confirm": "To jasne!",
+        "description": "Opcje płatności różnią się w zależności od produktu. Płatności można dokonać na kilka sposobów:",
+        "header": "Opcje płatności",
+        "info_option_extra_payment_ideal_description": "Twój kredyt nie wystarcza na rezerwację? W przypadku niektórych produktów możesz bezpiecznie zapłacić pozostałą kwotę online za pośrednictwem iDEAL.",
+        "info_option_extra_payment_ideal_title": "Dodatkowa płatność (iDeal)",
+        "info_option_qr_description": "Zapłać z łatwością w lokalizacji dostawcy, pokazując kod QR otrzymany przy kasie. Dostawca usług zeskanuje kod, a płatność zostanie natychmiast przetworzona.",
+        "info_option_qr_title": "Kod QR",
+        "info_option_reservation_description": "Zapłać za pośrednictwem tej strony, zamawiając ofertę. W tym celu należy kliknąć przycisk rezerwacji i podać wymagane dane. Kwota zostanie potrącona bezpośrednio z dostępnego kredytu. Dostawca otrzyma rezerwację i w razie potrzeby skontaktuje się z Tobą.",
+        "info_option_reservation_title": "Rezerwacja",
+        "title": "Opcje płatności"
     }
 }
